# aircall-mcp

./: .env.example  .gitignore  README.md  endpoints.yaml  pyproject.toml
.github/workflows/: ci.yml
aircall_mcp/: __init__.py  client.py  credentials.py  server.py
aircall_mcp/setup/: __init__.py  setup.py  verify.py
tests/: config.py
