[build-system]
requires = ["setuptools>=61.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "aircall-mcp"
version = "0.1.0"
description = "MCP server for Aircall — calls, contacts, transcripts, numbers, and team management for law firms"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.3.1",
]

[project.scripts]
aircall-mcp = "aircall_mcp.server:main"
aircall-mcp-setup = "aircall_mcp.setup.setup:main"
aircall-mcp-verify = "aircall_mcp.setup.verify:main"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
